--- a/jsa2.html
+++ b/jsa2.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Parent</div>
-    <div>child1</div>
-    <div>child2</div>
+    <h1>This is HTML File</h1>
+
+    <script src="null.js"></script>
 </body>
 </html>
