--- a/jsnew1.html
+++ b/jsnew1.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Parent</div>
-    <div>child1</div>
-    <div>child2</div>
+    <h1>Welcome to JavaScript</h1>
+    
+    <script src="object.js"</script>
 </body>
 </html>
