--- a/jsnew.html
+++ b/jsnew.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Parent</div>
-    <div>child1</div>
-    <div>child2</div>
+    <h1>Welcome to JavaScript</h1>
+    <script src="sample.js"</script>
 </body>
 </html>
